--- a/WebBellwether.Web/appData/translations/translation_1.json
+++ b/WebBellwether.Web/appData/translations/translation_1.json
@@ -59,5 +59,10 @@
   "FeaturesDetails": "Features details",
   "SelectDetail": "Select detail",
   "GameAdded": "Game added",
-  "GameExists": "Game with the same name already exists"
+  "GameExists": "Game with the same name already exists",
+  "SeveralLanguagesDescription": "If you want to add the game for several languages, select options below. After filling out the required fields add the game and then change the language and then fill in the name and description. Remember to turn off the options at the end !",
+  "GameForSeveralLanguages": "Game for several languages",
+  "ForSeveralLanguages": "for several languages",
+  "SeveralLanguageGameAdded": "You can add another translation",
+  "SeveralLanguageGameError": "The game has already this translation"
 }
