--- a/WebBellwether.Web/appData/translations/translation_2.json
+++ b/WebBellwether.Web/appData/translations/translation_2.json
@@ -33,6 +33,7 @@
   "ManagementGames": "Zarządzanie grami",
   "ManagementJokes": "Zarządzanie kawałami",
   "ManagementAccounts": "Zarządzanie kontami",
+  "ManagementLanguages": "Zarządzanie językami",
   "GameName": "Nazwa zabawy",
   "GameDetails": "Detale zabawy",
   "GameCategory": "Kategoria zabawy",
@@ -66,5 +67,11 @@
   "SeveralLanguageGameAdded": "Możesz dodać kolejną translację",
   "SeveralLanguageGameError": "Gra posiada już taką translację",
   "Previous": "Wstecz",
-  "Next": "Dalej"
+  "Next": "Dalej",
+  "GamesEdition": "Edycja gier",
+  "AddJoke": "Dodaj kawał",
+  "JokesEdition": "Edycja kawałów",
+  "ManagementJokeFeatures": "Zarządzanie cechami kawałów",
+  "AddLanguage": "Dodaj język",
+  "LanguagesEdition": "Edycja języków"
 }
