add flag icons , and develog management integration games

--- a/WebBellwether.Web/appData/translations/translation_1.json
+++ b/WebBellwether.Web/appData/translations/translation_1.json
@@ -78,5 +78,6 @@
   "EnterYourLogin": "Please enter your login",
   "YourPassword": "Your password",
   "EnterYourPassword": "Please enter your password",
-  "PleaseConfirmYourPassword": "Please confirm your password"
+  "PleaseConfirmYourPassword": "Please confirm your password",
+  "PleaseSelectGame": "Please select game"
 }
