--- a/WebBellwether.Web/appData/translations/translation_2.json
+++ b/WebBellwether.Web/appData/translations/translation_2.json
@@ -78,5 +78,6 @@
   "EnterYourLogin": "Proszę wprowadz swój login",
   "YourPassword": "Twoje hasło",
   "EnterYourPassword": "Proszę wprowadz swoje hasło",
-  "PleaseConfirmYourPassword": "Prosze potwierdz swoje hasło"
+  "PleaseConfirmYourPassword": "Prosze potwierdz swoje hasło",
+  "PleaseSelectGame": "Proszę wybierz grę"
 }
