small change on integration game crud

--- a/WebBellwether.Web/appData/translations/translation_1.json
+++ b/WebBellwether.Web/appData/translations/translation_1.json
@@ -41,6 +41,8 @@
   "NumberOfPlayer": "Number of player",
   "PreparationFun": "Preparation fun",
   "AddGame": "Add game",
+  "SaveGame": "Save game",
+  "DeleteGame": "Delete game",
   "Details": "Details",
   "GameFeature": "Game details",
   "MoreFunction": "More function",
