creative crisis interrupted ;) remove integration game works wery well , but i must repair insert new game for several languages

--- a/WebBellwether.Web/appData/translations/translation_1.json
+++ b/WebBellwether.Web/appData/translations/translation_1.json
@@ -81,5 +81,8 @@
   "YourPassword": "Your password",
   "EnterYourPassword": "Please enter your password",
   "PleaseConfirmYourPassword": "Please confirm your password",
-  "PleaseSelectGame": "Please select game"
+  "PleaseSelectGame": "Please select game",
+  "DeleteTheGame": "Delete the game",
+  "RemoveMainTranslation": "Remove main translation",
+  "RemoveAllTranslation": "Remove all translation"
 }
