rebuid user notification on new game , edit game features , fix small css problem on navbar

--- a/WebBellwether.Web/appData/translations/translation_1.json
+++ b/WebBellwether.Web/appData/translations/translation_1.json
@@ -86,5 +86,9 @@
   "RemoveMainTranslation": "Remove main translation",
   "RemoveAllTranslation": "Remove all translation",
   "Success": "Success",
-  "Failure": "Niepowodzenie"
+  "Failure": "Niepowodzenie",
+  "GameFeatureEdited": "Cecha gry została edytowana",
+  "GameFeatureDetailEdited": "Detal cechy gry został edytowany",
+  "GameFeatueNotEdited": "Cecha gry nie została edytowana",
+  "GameFeatureDetailNotEdited": "Detal cechy gry nie został edytowany"
 }
