--- a/WebBellwether.Web/appData/translations/translation_1.json
+++ b/WebBellwether.Web/appData/translations/translation_1.json
@@ -95,5 +95,8 @@
   "DeleteTranslation": "Delete translation",
   "HomeTranslationBasedOnTheCurrentlySelectedLanguagePortal": "The main translation based on the currently selected language portal",
   "OtherTranslationForTheCurrentlySelectedGameAndLanguage": "Other translations for the currently selected game and language",
-  "AutoCompleteGameFeaturesForLanguage": "Details of the game will be automatically translated into the current language to another translation"
+  "AutoCompleteGameFeaturesForLanguage": "Details of the game will be automatically translated into the current language to another translation",
+  "ListOfGameIncludesAvailableTranslation": "List of game with available translations",
+  "TranslateByGoogle": "Translate by google",
+  "TranslateByGoogleDescription": "After add first translation we active translate by google function.But you must remember , the best algoritm dont swith the humam"
 }
