--- a/WebBellwether.Web/appData/translations/translation_2.json
+++ b/WebBellwether.Web/appData/translations/translation_2.json
@@ -95,5 +95,8 @@
   "DeleteTranslation": "Usuń translację",
   "HomeTranslationBasedOnTheCurrentlySelectedLanguagePortal": "Głowna translacja bazująca na aktualnie wybranym języku portalu",
   "OtherTranslationForTheCurrentlySelectedGameAndLanguage": "Inne translacje dla aktualnie zaznaczonej gry i języka",
-  "AutoCompleteGameFeaturesForLanguage": "Detale gry zostaną automatycznie przetłumaczone na aktualnie wybrany język innej translacji"
+  "AutoCompleteGameFeaturesForLanguage": "Detale gry zostaną automatycznie przetłumaczone na aktualnie wybrany język innej translacji",
+  "ListOfGameIncludesAvailableTranslation": "Lista gier zawierajaca dostepne translacje",
+  "TranslateByGoogle": "Przetłumacz za pomocą google",
+  "TranslateByGoogleDescription": "Po dodaniu pierwszej translacji zostanie uaktywniona opcja przetłumacz za pomocą google translate.Pamiętaj jednak że żaden algorym nie zastąpi człowieka ... no chyba że pisał go autor tego portalu ;P "
 }
