insert and edit other game translation working but i have problem with client notification

--- a/WebBellwether.Web/appData/translations/translation_1.json
+++ b/WebBellwether.Web/appData/translations/translation_1.json
@@ -93,6 +93,10 @@
   "GameFeatureDetailNotEdited": "Retail features of the game has not been edited",
   "SaveTranslation": "Save translation",
   "DeleteTranslation": "Delete translation",
+  "TranslationAdded": "Translation added",
+  "TranslationEdited": "Translation was edited",
+  "TranslationNotAdded": "The translation has not been added to try to change its name",
+  "TranslationNotEdited": "The transaction has not been edited try to change its name",
   "HomeTranslationBasedOnTheCurrentlySelectedLanguagePortal": "The main translation based on the currently selected language portal",
   "OtherTranslationForTheCurrentlySelectedGameAndLanguage": "Other translations for the currently selected game and language",
   "AutoCompleteGameFeaturesForLanguage": "Details of the game will be automatically translated into the current language to another translation",
