--- a/WebBellwether.Web/appData/translations/translation_2.json
+++ b/WebBellwether.Web/appData/translations/translation_2.json
@@ -93,6 +93,10 @@
   "GameFeatureDetailNotEdited": "Detal cechy gry nie został edytowany",
   "SaveTranslation": "Zapisz translację",
   "DeleteTranslation": "Usuń translację",
+  "TranslationAdded": "Translacja została dodana",
+  "TranslationEdited": "Translacja została edytowana",
+  "TranslationNotAdded": "Translacja nie została dodana spróbuj zmienić jej nazwę",
+  "TranslationNotEdited": "Translacja nie została edytowana spróbuj zmienić jej nazwę",
   "HomeTranslationBasedOnTheCurrentlySelectedLanguagePortal": "Głowna translacja bazująca na aktualnie wybranym języku portalu",
   "OtherTranslationForTheCurrentlySelectedGameAndLanguage": "Inne translacje dla aktualnie zaznaczonej gry i języka",
   "AutoCompleteGameFeaturesForLanguage": "Detale gry zostaną automatycznie przetłumaczone na aktualnie wybrany język innej translacji",
