Edit , delete game translations works fine on chrome , i have problem with IE ...

--- a/WebBellwether.Web/appData/translations/translation_1.json
+++ b/WebBellwether.Web/appData/translations/translation_1.json
@@ -95,8 +95,12 @@
   "DeleteTranslation": "Delete translation",
   "TranslationAdded": "Translation added",
   "TranslationEdited": "Translation was edited",
+  "TranlastionRemoved": "Translation was removed",
   "TranslationNotAdded": "The translation has not been added to try to change its name",
   "TranslationNotEdited": "The transaction has not been edited try to change its name",
+  "TranslationNotRemoved": "Translation was not removed",
+  "GameTranslationNotExists": "Game translation not exists",
+  "GameFeaturesTranslationNotExists": "Game feature translation not exists",
   "HomeTranslationBasedOnTheCurrentlySelectedLanguagePortal": "The main translation based on the currently selected language portal",
   "OtherTranslationForTheCurrentlySelectedGameAndLanguage": "Other translations for the currently selected game and language",
   "AutoCompleteGameFeaturesForLanguage": "Details of the game will be automatically translated into the current language to another translation",
