--- a/WebBellwether.Web/appData/translations/translation_2.json
+++ b/WebBellwether.Web/appData/translations/translation_2.json
@@ -95,8 +95,12 @@
   "DeleteTranslation": "Usuń translację",
   "TranslationAdded": "Translacja została dodana",
   "TranslationEdited": "Translacja została edytowana",
+  "TranlastionRemoved": "Translacja została usunięta",
   "TranslationNotAdded": "Translacja nie została dodana spróbuj zmienić jej nazwę",
   "TranslationNotEdited": "Translacja nie została edytowana spróbuj zmienić jej nazwę",
+  "GameTranslationNotExists": "Translacja gry nie istnieje",
+  "GameFeaturesTranslationNotExists": "Cechy translacji gry nie istnieją",
+  "TranslationNotRemoved": "Translacja nie została usunięta",
   "HomeTranslationBasedOnTheCurrentlySelectedLanguagePortal": "Głowna translacja bazująca na aktualnie wybranym języku portalu",
   "OtherTranslationForTheCurrentlySelectedGameAndLanguage": "Inne translacje dla aktualnie zaznaczonej gry i języka",
   "AutoCompleteGameFeaturesForLanguage": "Detale gry zostaną automatycznie przetłumaczone na aktualnie wybrany język innej translacji",
