new module joke : entity and model complete . Works on management joke categories

--- a/WebBellwether.Web/appData/translations/translation_1.json
+++ b/WebBellwether.Web/appData/translations/translation_1.json
@@ -76,7 +76,7 @@
   "GamesEdition": "Games edition",
   "AddJoke": "Add joke",
   "JokesEdition": "Jokes edition",
-  "ManagementJokeFeatures": "Management features jokes",
+  "ManagementJokeCategories": "Management joke categories",
   "AddLanguage": "Add language",
   "LanguagesEdition": "Languages edition",
   "YourLogin": "Your login",
