--- a/WebBellwether.Web/appData/translations/translation_2.json
+++ b/WebBellwether.Web/appData/translations/translation_2.json
@@ -76,7 +76,7 @@
   "GamesEdition": "Edycja gier",
   "AddJoke": "Dodaj kawał",
   "JokesEdition": "Edycja kawałów",
-  "ManagementJokeFeatures": "Zarządzanie cechami kawałów",
+  "ManagementJokeCategories": "Zarządzanie kategoriami kawałów",
   "AddLanguage": "Dodaj język",
   "LanguagesEdition": "Edycja języków",
   "YourLogin": "Twój login",
