I work on joke categories management

--- a/WebBellwether.Web/appData/translations/translation_1.json
+++ b/WebBellwether.Web/appData/translations/translation_1.json
@@ -77,6 +77,12 @@
   "AddJoke": "Add joke",
   "JokesEdition": "Jokes edition",
   "ManagementJokeCategories": "Management joke categories",
+  "AddJokeCategory": "Add joke category",
+  "CategoryName": "Category name",
+  "EditJokeCategory": "Edit joke category",
+  "DeleteJokeCategory": "Delete joke category",
+  "SaveCategory": "Save category",
+  "ListOfJokeCategoryIncludesAvailableTranslation": "List of joke category with available translations",
   "AddLanguage": "Add language",
   "LanguagesEdition": "Languages edition",
   "YourLogin": "Your login",
