--- a/WebBellwether.Web/appData/translations/translation_2.json
+++ b/WebBellwether.Web/appData/translations/translation_2.json
@@ -77,6 +77,12 @@
   "AddJoke": "Dodaj kawał",
   "JokesEdition": "Edycja kawałów",
   "ManagementJokeCategories": "Zarządzanie kategoriami kawałów",
+  "AddJokeCategory": "Dodaj kategorie żartu",
+  "CategoryName": "Nazwa kategori",
+  "EditJokeCategory": "Edytuj kategorie żartu",
+  "DeleteJokeCategory": "Usuń kategorie żartu",
+  "SaveCategory": "Zapisz kategorie",
+  "ListOfJokeCategoryIncludesAvailableTranslation": "Lista kategorii kawałów zawierajaca dostepne translacje",
   "AddLanguage": "Dodaj język",
   "LanguagesEdition": "Edycja języków",
   "YourLogin": "Twój login",
