Works on management joke categories , current problems : caching in api ...

--- a/WebBellwether.Web/appData/translations/translation_1.json
+++ b/WebBellwether.Web/appData/translations/translation_1.json
@@ -83,6 +83,14 @@
   "DeleteJokeCategory": "Delete joke category",
   "SaveCategory": "Save category",
   "ListOfJokeCategoryIncludesAvailableTranslation": "List of joke category with available translations",
+  "OtherTranslationForTheCurrentlySelectedJokeCategoryAndLanguage": "Other translation for currently selected joke category and language",
+  "SelectLanguageForTheJokeCategory": "Select language for the joke category",
+  "JokeCategoryEdited": "Joke category was edited",
+  "JokeCategoryNotExists": "Joke category not exists",
+  "JokeCategoryDeleted": "Joke category was deleted",
+  "JokeCategoryAdded": "Joke category was added",
+  "JokeCategoryNotAdded": "Category joke was not added, change its name",
+  "JokeCategoryTranslationNotExists": "Joke category translation not exists",
   "AddLanguage": "Add language",
   "LanguagesEdition": "Languages edition",
   "YourLogin": "Your login",
