--- a/WebBellwether.Web/appData/translations/translation_2.json
+++ b/WebBellwether.Web/appData/translations/translation_2.json
@@ -83,6 +83,14 @@
   "DeleteJokeCategory": "Usuń kategorie żartu",
   "SaveCategory": "Zapisz kategorie",
   "ListOfJokeCategoryIncludesAvailableTranslation": "Lista kategorii kawałów zawierajaca dostepne translacje",
+  "OtherTranslationForTheCurrentlySelectedJokeCategoryAndLanguage": "Inne translacje dla aktualnie zaznaczonej kategorii żartu i języka",
+  "SelectLanguageForTheJokeCategory": "Wybierz język dla kategorii żartu",
+  "JokeCategoryEdited": "Kategoria żartu została edytowana",
+  "JokeCategoryNotExists": "Kategoria żartu nie istnieje",
+  "JokeCategoryDeleted": "Kategoria żartu została usunięta",
+  "JokeCategoryAdded": "Kategoria żartu została dodana",
+  "JokeCategoryNotAdded": "Kategoria żartu nie została dodana , zmień jej nazwę",
+  "JokeCategoryTranslationNotExists": "Translacja kategorii żartu nie istnieje",
   "AddLanguage": "Dodaj język",
   "LanguagesEdition": "Edycja języków",
   "YourLogin": "Twój login",
