Management joke category finished  + language translation. Tomorow joke management

--- a/WebBellwether.Web/appData/translations/translation_1.json
+++ b/WebBellwether.Web/appData/translations/translation_1.json
@@ -77,9 +77,9 @@
   "AddJoke": "Add joke",
   "JokesEdition": "Jokes edition",
   "ManagementJokeCategories": "Management joke categories",
-  "AddJokeCategory": "Add joke category",
+  "AddJokeCategory": "Add categories joke for the currently selected main language",
   "CategoryName": "Category name",
-  "EditJokeCategory": "Edit joke category",
+  "EditJokeCategory": "Edit joke category for the currently selected main language",
   "DeleteJokeCategory": "Delete joke category",
   "SaveCategory": "Save category",
   "ListOfJokeCategoryIncludesAvailableTranslation": "List of joke category with available translations",
@@ -90,7 +90,9 @@
   "JokeCategoryDeleted": "Joke category was deleted",
   "JokeCategoryAdded": "Joke category was added",
   "JokeCategoryNotAdded": "Category joke was not added, change its name",
+  "ThisJokeCategoryExists": "This joke category exists , change its name",
   "JokeCategoryTranslationNotExists": "Joke category translation not exists",
+  "RemoveJokeCategoryTranslation": "Remove joke category translation",
   "AddLanguage": "Add language",
   "LanguagesEdition": "Languages edition",
   "YourLogin": "Your login",
