--- a/WebBellwether.Web/appData/translations/translation_2.json
+++ b/WebBellwether.Web/appData/translations/translation_2.json
@@ -77,9 +77,9 @@
   "AddJoke": "Dodaj kawał",
   "JokesEdition": "Edycja kawałów",
   "ManagementJokeCategories": "Zarządzanie kategoriami kawałów",
-  "AddJokeCategory": "Dodaj kategorie żartu",
+  "AddJokeCategory": "Dodaj kategorie żartu dla aktualnie zaznaczonego głównego języka",
   "CategoryName": "Nazwa kategori",
-  "EditJokeCategory": "Edytuj kategorie żartu",
+  "EditJokeCategory": "Edytuj kategorie żartu dla aktualnie zaznaczonego głównego języka",
   "DeleteJokeCategory": "Usuń kategorie żartu",
   "SaveCategory": "Zapisz kategorie",
   "ListOfJokeCategoryIncludesAvailableTranslation": "Lista kategorii kawałów zawierajaca dostepne translacje",
@@ -90,7 +90,9 @@
   "JokeCategoryDeleted": "Kategoria żartu została usunięta",
   "JokeCategoryAdded": "Kategoria żartu została dodana",
   "JokeCategoryNotAdded": "Kategoria żartu nie została dodana , zmień jej nazwę",
+  "ThisJokeCategoryExists": "Ketegoria żartu o takiej nazwie już istnieje zmień jej nazwę",
   "JokeCategoryTranslationNotExists": "Translacja kategorii żartu nie istnieje",
+  "RemoveJokeCategoryTranslation": "Usuwanie translacji kategori żartu",
   "AddLanguage": "Dodaj język",
   "LanguagesEdition": "Edycja języków",
   "YourLogin": "Twój login",
