management jokes : insert single joke + list of jokes

--- a/WebBellwether.Web/appData/translations/translation_2.json
+++ b/WebBellwether.Web/appData/translations/translation_2.json
@@ -74,12 +74,19 @@
   "Previous": "Wstecz",
   "Next": "Dalej",
   "GamesEdition": "Edycja gier",
-  "AddJoke": "Dodaj kawał",
+  "AddJoke": "Dodaj kawał dla aktualnie zaznaczonego głównego języka",
   "JokesEdition": "Edycja kawałów",
+  "ListOfJokeIncludesAvailableTranslation": "Lista kawałów zawierajaca dostepne translacje",
   "ManagementJokeCategories": "Zarządzanie kategoriami kawałów",
   "AddJokeCategory": "Dodaj kategorie żartu dla aktualnie zaznaczonego głównego języka",
+  "AddJokeShort": "Dodaj żart",
+  "SaveJoke": "Zapisz żart",
+  "DeleteJoke": "Usuń żart",
   "CategoryName": "Nazwa kategori",
   "EditJokeCategory": "Edytuj kategorie żartu dla aktualnie zaznaczonego głównego języka",
+  "EditJoke": "Edytuj żart dla aktualnie zaznaczonego głównego języka",
+  "JokeContent": "Zawartość kawału",
+  "JokeCategory": "Kategoria żartu",
   "DeleteJokeCategory": "Usuń kategorie żartu",
   "SaveCategory": "Zapisz kategorie",
   "ListOfJokeCategoryIncludesAvailableTranslation": "Lista kategorii kawałów zawierajaca dostepne translacje",
@@ -93,6 +100,7 @@
   "ThisJokeCategoryExists": "Ketegoria żartu o takiej nazwie już istnieje zmień jej nazwę",
   "JokeCategoryTranslationNotExists": "Translacja kategorii żartu nie istnieje",
   "RemoveJokeCategoryTranslation": "Usuwanie translacji kategori żartu",
+  "SelectCategoryForJoke": "Wybierz kategorie dla żartu",
   "AddLanguage": "Dodaj język",
   "LanguagesEdition": "Edycja języków",
   "YourLogin": "Twój login",
