--- a/WebBellwether.Web/appData/translations/translation_1.json
+++ b/WebBellwether.Web/appData/translations/translation_1.json
@@ -74,12 +74,16 @@
   "Previous": "Previous",
   "Next": "Next",
   "GamesEdition": "Games edition",
-  "AddJoke": "Add joke",
+  "AddJoke": "Add joke for the currently selected main language",
   "JokesEdition": "Jokes edition",
+  "ListOfJokeIncludesAvailableTranslation": "List of joke with available translations",
   "ManagementJokeCategories": "Management joke categories",
+  "JokeCategory": "Joke category",
   "AddJokeCategory": "Add categories joke for the currently selected main language",
   "CategoryName": "Category name",
   "EditJokeCategory": "Edit joke category for the currently selected main language",
+  "EditJoke": "Edit joke for the currently selected main language",
+  "JokeContent": "Joke content",
   "DeleteJokeCategory": "Delete joke category",
   "SaveCategory": "Save category",
   "ListOfJokeCategoryIncludesAvailableTranslation": "List of joke category with available translations",
@@ -93,6 +97,10 @@
   "ThisJokeCategoryExists": "This joke category exists , change its name",
   "JokeCategoryTranslationNotExists": "Joke category translation not exists",
   "RemoveJokeCategoryTranslation": "Remove joke category translation",
+  "SelectCategoryForJoke": "Select category for joke",
+  "AddJokeShort": "Add joke",
+  "SaveJoke": "Save joke",
+  "DeleteJoke": "Remove joke",
   "AddLanguage": "Add language",
   "LanguagesEdition": "Languages edition",
   "YourLogin": "Your login",
