management jokes + translations . Only edit main translations left .

--- a/WebBellwether.Web/appData/translations/translation_1.json
+++ b/WebBellwether.Web/appData/translations/translation_1.json
@@ -101,6 +101,18 @@
   "AddJokeShort": "Add joke",
   "SaveJoke": "Save joke",
   "DeleteJoke": "Remove joke",
+  "JokeAdded": "Joke has been added",
+  "ThisJokeExists": "This joke is already exists",
+  "JokeNotAdded": "Joke has not been added .",
+  "JokeDeleted": "Joke has been removed",
+  "JokeNotDeleted": "Joke has not been removed",
+  "JokeDetailNotExists": "Joke detail not exists",
+  "JokeNotExists": "Joke not exists",
+  "OtherTranslationForTheCurrentlySelectedJokeAndLanguage": "Other translation for currently selected joke and language",
+  "SelectLanguageForTheJoke": "Select language for the joke",
+  "AutoCompleteJokeCategoryForLanguage": "Category of the joke will be automatically translated into the current language to another translation",
+  "RemoveJokeTranslation": "Remove joke translation",
+  "LanguageNotExists": "Language not exists",
   "AddLanguage": "Add language",
   "LanguagesEdition": "Languages edition",
   "YourLogin": "Your login",
