--- a/WebBellwether.Web/appData/translations/translation_2.json
+++ b/WebBellwether.Web/appData/translations/translation_2.json
@@ -101,6 +101,18 @@
   "JokeCategoryTranslationNotExists": "Translacja kategorii żartu nie istnieje",
   "RemoveJokeCategoryTranslation": "Usuwanie translacji kategori żartu",
   "SelectCategoryForJoke": "Wybierz kategorie dla żartu",
+  "JokeAdded": "Zart został dodany",
+  "ThisJokeExists": "Taki żart już istnieje",
+  "JokeNotAdded": "Żart nie został dodany .",
+  "JokeDeleted": "Żart został usunięty",
+  "JokeNotDeleted": "Żart nie został usunięty",
+  "JokeDetailNotExists": "Detal żartu nie istnieje",
+  "JokeNotExists": "Żart nie istnieje",
+  "OtherTranslationForTheCurrentlySelectedJokeAndLanguage": "Inne translacje dla aktualnie zaznaczonego żartu i języka",
+  "RemoveJokeTranslation": "Usuń translacje żartu",
+  "SelectLanguageForTheJoke": "Wybierz język dla żartu",
+  "AutoCompleteJokeCategoryForLanguage": "Kategoria żartu zostanie automatycznie przetłumaczona na aktualnie wybrany język innej translacji",
+  "LanguageNotExists": "Language not exists",
   "AddLanguage": "Dodaj język",
   "LanguagesEdition": "Edycja języków",
   "YourLogin": "Twój login",
