--- a/WebBellwether.Web/appData/translations/translation_1.json
+++ b/WebBellwether.Web/appData/translations/translation_1.json
@@ -98,6 +98,7 @@
   "JokeCategoryTranslationNotExists": "Joke category translation not exists",
   "RemoveJokeCategoryTranslation": "Remove joke category translation",
   "SelectCategoryForJoke": "Select category for joke",
+  "ForLanguage": "For language : ",
   "AddJokeShort": "Add joke",
   "SaveJoke": "Save joke",
   "DeleteJoke": "Remove joke",
