expansion of language management

--- a/WebBellwether.Web/appData/translations/translation_1.json
+++ b/WebBellwether.Web/appData/translations/translation_1.json
@@ -116,6 +116,7 @@
   "LanguageNotExists": "Language not exists",
   "AddLanguage": "Add language",
   "LanguagesEdition": "Languages edition",
+  "MainLanguageTranslation": "The main language translation",
   "Flag": "Flag",
   "YourLogin": "Your login",
   "EnterYourLogin": "Please enter your login",
