--- a/WebBellwether.Web/appData/translations/translation_2.json
+++ b/WebBellwether.Web/appData/translations/translation_2.json
@@ -116,6 +116,7 @@
   "LanguageNotExists": "Language not exists",
   "AddLanguage": "Dodaj język",
   "LanguagesEdition": "Edycja języków",
+  "MainLanguageTranslation": "Translacja dla głównego języka",
   "Flag": "Flaga",
   "YourLogin": "Twój login",
   "EnterYourLogin": "Proszę wprowadz swój login",
