--- a/WebBellwether.Web/appData/translations/translation_2.json
+++ b/WebBellwether.Web/appData/translations/translation_2.json
@@ -117,7 +117,15 @@
   "AddLanguage": "Dodaj język",
   "LanguagesEdition": "Edycja języków",
   "MainLanguageTranslation": "Translacja dla głównego języka",
-  "Flag": "Flaga",
+  "LanguageName": "Nazwa języka",
+  "LanguageShortName": "Krótka nazwa języka",
+  "LanguageFlag": "Flaga języka",
+  "SaveBasicLanguageInformation": "Zapisz podstawowe informacje",
+  "Key": "Klucza",
+  "Value": "Wartości",
+  "SelectAWay": "Wybierz sposób",
+  "LanguageKeyValueEdited": "Wartość klucza została edytowana",
+  "LanguageKeyValueNotEdited": "Wartość klucza nie zostala edytowana",
   "YourLogin": "Twój login",
   "EnterYourLogin": "Proszę wprowadz swój login",
   "YourPassword": "Twoje hasło",
