work on the publication of languages

--- a/WebBellwether.Web/appData/translations/translation_1.json
+++ b/WebBellwether.Web/appData/translations/translation_1.json
@@ -126,6 +126,10 @@
   "SelectAWay": "Selecte a way",
   "LanguageKeyValueEdited": "Langauge key value was edited",
   "LanguageKeyValueNotEdited": "Langauge key value was not edited",
+  "LanguageEdited": "Language was edited",
+  "LanguageNotEdited": "Language was not edited",
+  "PublishLanguage": "Publish language",
+  "HowToPublishLanguage": "To publish language must be filled with all the values for the key (listed below). A minimum of one language must be public",
   "YourLogin": "Your login",
   "EnterYourLogin": "Please enter your login",
   "YourPassword": "Your password",
