--- a/WebBellwether.Web/appData/translations/translation_2.json
+++ b/WebBellwether.Web/appData/translations/translation_2.json
@@ -126,6 +126,10 @@
   "SelectAWay": "Wybierz sposób",
   "LanguageKeyValueEdited": "Wartość klucza została edytowana",
   "LanguageKeyValueNotEdited": "Wartość klucza nie zostala edytowana",
+  "LanguageEdited": "Język został edytowany",
+  "LanguageNotEdited": "Język nie został edytowany",
+  "PublishLanguage": "Publikuj język",
+  "HowToPublishLanguage": "Aby opublikować język wypełnione musza być wszystkie wartości dla klucza (lista poniżej) . Minimum jeden język musi być publiczny",
   "YourLogin": "Twój login",
   "EnterYourLogin": "Proszę wprowadz swój login",
   "YourPassword": "Twoje hasło",
