reforge in repositories (unit of work deleted) , publish languages work fine .

--- a/WebBellwether.Web/appData/translations/translation_2.json
+++ b/WebBellwether.Web/appData/translations/translation_2.json
@@ -130,6 +130,11 @@
   "LanguageNotEdited": "Język nie został edytowany",
   "PublishLanguage": "Publikuj język",
   "HowToPublishLanguage": "Aby opublikować język wypełnione musza być wszystkie wartości dla klucza (lista poniżej) . Minimum jeden język musi być publiczny",
+  "LanguageFileNotExists": "Plik językowy nie istnieje",
+  "EmptyKeyExists": "Plik językowy zawiera puste pozycje",
+  "OnlyOnePublicLangugae": "Istnieje tylko jeden publiczny język",
+  "LanguageHasBeenPublished": "Język został opublikowany",
+  "LanguageHasBeenNonPublic": "Język nie jest publiczny",
   "YourLogin": "Twój login",
   "EnterYourLogin": "Proszę wprowadz swój login",
   "YourPassword": "Twoje hasło",
