--- a/WebBellwether.Web/appData/translations/translation_1.json
+++ b/WebBellwether.Web/appData/translations/translation_1.json
@@ -130,6 +130,11 @@
   "LanguageNotEdited": "Language was not edited",
   "PublishLanguage": "Publish language",
   "HowToPublishLanguage": "To publish language must be filled with all the values for the key (listed below). A minimum of one language must be public",
+  "LanguageFileNotExists": "Language file not exists",
+  "EmptyKeyExists": "In language file exists empty keys",
+  "OnlyOnePublicLangugae": "Exists only one public language",
+  "LanguageHasBeenPublished": "Language has been published",
+  "LanguageHasBeenNonPublic": "Language has been nonpublic",
   "YourLogin": "Your login",
   "EnterYourLogin": "Please enter your login",
   "YourPassword": "Your password",
