new languages develop

--- a/WebBellwether.Web/appData/translations/translation_1.json
+++ b/WebBellwether.Web/appData/translations/translation_1.json
@@ -135,6 +135,9 @@
   "OnlyOnePublicLangugae": "Exists only one public language",
   "LanguageHasBeenPublished": "Language has been published",
   "LanguageHasBeenNonPublic": "Language has been nonpublic",
+  "LanguageAdded": "Language has been added",
+  "LanguageNotAdded": "Language has not been added",
+  "LanguageExists": "This Language exists",
   "YourLogin": "Your login",
   "EnterYourLogin": "Please enter your login",
   "YourPassword": "Your password",
