--- a/WebBellwether.Web/appData/translations/translation_2.json
+++ b/WebBellwether.Web/appData/translations/translation_2.json
@@ -135,6 +135,9 @@
   "OnlyOnePublicLangugae": "Istnieje tylko jeden publiczny język",
   "LanguageHasBeenPublished": "Język został opublikowany",
   "LanguageHasBeenNonPublic": "Język nie jest publiczny",
+  "LanguageAdded": "Język został dodany",
+  "LanguageNotAdded": "Język nie został dodany",
+  "LanguageExists": "Taki język juz istnieje",
   "YourLogin": "Twój login",
   "EnterYourLogin": "Proszę wprowadz swój login",
   "YourPassword": "Twoje hasło",
